[package]
name = "logger"
version = "0.1.0"
edition = "2021"
description = "Logging plugin for Nom"
authors = ["Nom Team"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
